--- a/src/components/DealerHand/DealerHand.module.css
+++ b/src/components/DealerHand/DealerHand.module.css
@@ -6,18 +6,37 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
     margin: 16px auto;
-    max-width: 400px;
+    display: flex;
+
 }
 
 .dealer-hand h2 {
     font-size: 1.5em;
-    margin-bottom: 12px;
+    margin-bottom: 23px;
     color: #213547;
 }
 
 .dealer-hand-cards {
-    display: flex;
-    justify-content: center;
-    flex-direction: row-reverse;
-    gap: 10px;
+    position: relative;
+    height: 140px;
+    width: 170px;
+
+    div{
+        position: absolute;
+        left: 20px;
+    }
+}
+
+.dealer-hand-info {
+    font-size: 1.1em;
+    color: #555;
+}
+
+.points-label {
+    font-weight: bold;
+    color: #333;
+    background-color: whitesmoke;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    padding: 18px;
 }
