--- a/src/pages/Layout/Layout.module.css
+++ b/src/pages/Layout/Layout.module.css
@@ -1,14 +1,3 @@
-body {
-    font-family: sans-serif;
-    margin: 0;
-    background: #064420;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
 .app-container {
     width: 100%;
     max-width: 600px;
@@ -40,9 +29,17 @@ body {
     margin-top: 0;
 }
 
-.home-link{
-    img{
-        height: 1.5em;
-        vertical-align: center;
-    }
+img{
+    height: 1.5em;
+    vertical-align: center;
+}
+
+.button {
+    border: none;
+    color: white;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 8px;
+    transition-duration: 0.4s;
 }
